--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Cheems-Bot-MD",
-    "version": "14.0.0",
-    "description": "Whatsapp Bot By DGXeon",
+    "name": "Jewel-Bot-MD",
+    "version": "1.0.0",
+    "description": "Whatsapp Crash Bot By Giddy Tennor",
     "main": "index.js",
     "type": "commonjs",
     "directories": {
@@ -12,7 +12,7 @@
     "scripts": {
         "start": "node index.js"
     },
-    "author": "DGXeon",
+    "author": "Giddy Tennor",
     "license": "MIT",
     "dependencies": {
         "@whiskeysockets/baileys": "^6.7.5",
