--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "name": "Jewel Bug Bot",
-  "description": "whatsapp md bot build with nodejs",
+  "description": "whatsapp md bot build with nodejs created by Giddy Tennor",
   "repository": "https://github.com/Tennormodz/Jewel",
-  "logo": "https://pbs.twimg.com/media/FO7fojOakAAyYgt?format=jpg&name=900x900",
+  "logo": "https://telegra.ph/file/241785e6e5679008777c9.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
